objects/ObjectFromEmailDefaultFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Object From Email Default Fields</description>
    <fields>
        <fullName>Default_Value_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Value Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Value_DateTime__c</fullName>
        <label>Default Value DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Default_Value_Date__c</fullName>
        <label>Default Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Value_Number__c</fullName>
        <label>Default Value Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Value_Text__c</fullName>
        <label>Default Value Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Object Name</description>
        <label>Object Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Object From Email Default Fields</label>
</CustomObject>